add LAB1html no6B

--- a/lab1html/no6B/web2/content/topic/t1.html
+++ b/lab1html/no6B/web2/content/topic/t1.html
@@ -7,8 +7,11 @@
     
 	
 	<!-- 1.	แสดงวิดีโอ rain.mp4 -->
+    <video width="80%" autoplay>
+        <source src="../../media/video/rain.mp4">
+    </video>
 	<!-- 2.	สร้าง Link กลับไปหน้า index.html -->
-
+    <h1><a href="../../index.html">index</a></h1>
 
 </body>
 </html>
