--- a/lab1html/no6B/web2/index.html
+++ b/lab1html/no6B/web2/index.html
@@ -5,10 +5,17 @@
 <body>
     <h1>หน้าแรก</h1>    
     <!-- 1.	แสดงภาพ garden.jpg -->
+	<img src="./media/images/garden.jpg" alt="garden.jpg">
 	<!-- 2.	เล่นเสียงเพลงจากไฟล์ goes-without-saying.mp3 -->
+	<audio autoplay>
+		<source src="./media/audio/goes-without-saying.mp3">
+	</audio>
 	<!-- 3.	สร้าง Link ไปยังหน้า t1.html *** -->
+	<h1><a href="./content/topic/t1.html">page t1</a></h1>
 	<!-- 4.	สร้าง Link ไปยังหน้า 5idea.pdf -->
+	<h1><a href="./document/5 idea.pdf" target="_blank">page 5 ieda</a></h1>
 	<!-- 5.	สร้าง Link ให้ผู้ใช้ download ไฟล์ putty.zip -->
+	<h1><a href="./download/putty.zip">download putty.zip</a></h1>
 
 </body>
 </html>
